--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  font-family: "Pretendard-Regular";
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root {
+  background-color: rgb(36, 36, 36);
+  height: 100%;
+  width: 100%;
+  /* overflow: auto; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1,
+p,
+div {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.link-item {
+  color: white;
+  text-decoration: none;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link-item:active {
+  color: red;
+}
+
+.banner-img {
+  height: 600px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.banner-img::before {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 600px;
+  content: "";
+  background: linear-gradient(to right, black, transparent);
+}
+
+.banner-item {
+  z-index: 1;
+  color: white;
+  width: 40%;
+  margin-left: 10%;
+}
+
+.card-item {
+  width: 300px;
+  height: 200px;
+}
+
+.overlay {
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: left;
+  padding: 0 0 20px 20px;
+}
+
+.overlay a {
+  text-decoration: none;
+  color: white;
+}
+
+.card-item:hover .overlay {
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.708);
+  width: 100%;
+  height: 100%;
+}
+
+.movie-list {
+  padding: 5%;
+}
+
+.movie-detail {
+  background-color: rgb(16, 16, 16);
+  padding: 5%;
+}
+
+.movie-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.detail-poster {
+  width: 500px;
+  height: 600px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.detail-item {
+  width: 100%;
 }
